[package]
name = "felgens"
version = "0.1.0"
edition = "2021"
description = "Bilibili live danmu websocket library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.19", features = ["macros", "rt", "rt-multi-thread", "io-util", "io-std", "time"] }
tokio-tungstenite = { version = "0.18", features = ["connect", "native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
scroll = "0.11"
scroll_derive = "0.11"
reqwest = { version = "0.11", features = ["json"] }
brotli = "3.3"
log = "0.4"

[dev-dependencies]
owo-colors = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
